--- a/java/springbootngcd.org
+++ b/java/springbootngcd.org
@@ -7,7 +7,165 @@
 **** Set up Rest API
 **** Set up Persistence Model
 **** Liquibase Migration
-**** Using Mybatis
+
+
+*****  pom.xml
+#+BEGIN_SRC xml
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+	</dependency>
+#+END_SRC
+
+***** application.properties
+#+BEGIN_SRC 
+liquibase.changeLog=classpath:liquibase/migrations/db.changelog.xml
+liquibase.url=${spring.datasource.url}
+liquibase.user=${spring.datasource.username}
+liquibase.password=${spring.datasource.password}
+liquibase.dropFirst=false
+#+END_SRC
+
+***** /src/main/resources/liquibase/migrations/db.changelog.xml
+#+BEGIN_SRC xml
+<?xml version="1.0" encoding="UTF-8"?>
+
+<databaseChangeLog
+        xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xmlns:ext="http://www.liquibase.org/xml/ns/dbchangelog-ext"
+        xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.0.xsd
+        http://www.liquibase.org/xml/ns/dbchangelog-ext http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd">
+
+    <include file="liquibase/migrations/db.changelog.0.0.1.xml" />
+
+</databaseChangeLog>
+#+END_SRC
+
+***** /src/main/resources/liquibase/migrations/db.changelog.0.0.1.xml
+#+BEGIN_SRC xml
+<?xml version="1.0" encoding="UTF-8"?>
+
+<databaseChangeLog
+        xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xmlns:ext="http://www.liquibase.org/xml/ns/dbchangelog-ext"
+        xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.0.xsd
+        http://www.liquibase.org/xml/ns/dbchangelog-ext http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd">
+
+    <changeSet author="amitthk" id="1">
+    <sql dbms="h2"
+            endDelimiter=";"
+            splitStatements="true"
+            stripComments="true">
+            DROP TABLE USERS IF EXISTS;
+	CREATE TABLE USERS (
+	ID BIGINT auto_increment PRIMARY KEY,
+	USERNAME VARCHAR(255),EMAIL VARCHAR(255),PASSWORDHASH VARCHAR(255),SALT VARCHAR(255), CREATEDATE DATE, LASTLOGIN DATE,LASTUPDATE DATE);
+    </sql>
+    
+	<sql dbms="PostgreSQL"
+	            endDelimiter=";"
+	            splitStatements="true"
+	            stripComments="true">
+	CREATE TABLE IF NOT EXISTS USERS (
+	ID BIGSERIAL PRIMARY KEY,
+	USERNAME VARCHAR(255),
+	EMAIL VARCHAR(255),
+	PASSWORDHASH VARCHAR(255),
+	SALT VARCHAR(255), 
+	CREATEDATE DATE, 
+	LASTLOGIN DATE,
+	LASTUPDATE DATE);
+	    </sql>
+</changeSet>
+    
+</databaseChangeLog>
+#+END_SRC
+
+
+**** Mybatis
+
+***** pom.xml
+#+BEGIN_SRC xml
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
+		</dependency><!--$NO-MVN-MAN-VER$-->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+#+END_SRC
+
+***** PersistenceConfiguration
+#+BEGIN_SRC xml
+public class PersistenceConfiguration {
+	@Bean
+	@ConfigurationProperties(prefix="spring.datasource")
+	@Primary
+	public DataSource dataSource() {
+		DriverManagerDataSource dataSource = new DriverManagerDataSource();
+        return dataSource;
+	}
+	
+
+    @Bean
+    public SqlSessionFactoryBean sqlSessionFactory() throws Exception {
+        SqlSessionFactoryBean sessionFactory = new SqlSessionFactoryBean();
+        sessionFactory.setDataSource(dataSource());
+        sessionFactory.setTypeAliasesPackage("com.amitthk.springbootngcd.domain");
+        return sessionFactory;
+    }
+#+END_SRC
+***** Application Properties
+#+BEGIN_SRC 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.database.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/mysbappdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.max-active=5
+spring.datasource.max-idle=3
+spring.datasource.max-wait=10000
+spring.datasource.min-evictable-idle-time-millis=1000
+spring.datasource.min-idle=8
+spring.datasource.time-between-eviction-runs-millis=1
+#+END_SRC
+***** UserInfoMapper
+#+BEGIN_SRC java
+public interface UserMapper {
+    int deleteByPrimaryKey(Long id);
+    Long insert(UserInfo record);
+    int insertSelective(UserInfo record);
+    UserInfo selectByPrimaryKey(Long id);
+    UserInfo selectByEmail(String id);
+    List<UserInfo> selectAll();
+    int updateByPrimaryKeySelective(UserInfo record);
+    int updateByPrimaryKey(UserInfo record);
+}
+#+END_SRC
+Use the XML mappings generated by mybatis-generator
+
 **** Setup JWT token authentication
 **** Setup Spring Security
 *** Dashboard API
