--- a/linux/references.org
+++ b/linux/references.org
@@ -26,6 +26,33 @@ git branch -a
  
 #+END_SRC
 
+Pull all branches from list of git repo (read list from file params.txt)
+
+#+BEGIN_SRC 
+#!/bin/bash
+
+gitpull(){
+echo "git clone ${1}@${2}:${3}/${4}.git"
+mkdir "${4}"
+git clone "${1}@${2}:${3}/${4}.git" "${4}"
+cd ${4}
+git branch -r | grep -v '\->' | while read remote; do git branch --track "${remote#origin/}" "$remote"; done
+git fetch --all
+git pull --all
+git branch -a
+cd ..
+}
+
+getall(){
+while read x y
+do
+echo "gitpull git bitbucket.org ${x} ${y}"
+gitpull git bitbucket.org ${x} ${y}
+done < params.txt
+}
+
+#+END_SRC
+
 ** setup the git ssh keys
 
 First setup the ssh config to use specific keys for specific hosts:
