--- a/ansible.org
+++ b/ansible.org
@@ -48,6 +48,184 @@ Modules (define actions)
 
 * ansible-playbooks
 
+** Tasks
+ - hosts: all
+   user: root
+   sudo: no
+   vars:
+     aaa: bbb
+   tasks:
+     - ...
+   handlers:
+     - ...
+
+** Includes
+
+ tasks:
+   - include: db.yml
+ handlers:
+   - include: db.yml user=timmy
+ 
+** Handlers
+ handlers:
+   - name: start apache2
+     action: service name=apache2 state=started
+
+ tasks:
+   - name: install apache
+     action: apt pkg=apache2 state=latest
+     notify:
+       - start apache2
+ 
+** Vars
+ - host: lol
+   vars_files:
+     - vars.yml
+   vars:
+     project_root: /etc/xyz
+   tasks:
+     - name: Create the SSH directory.
+       file: state=directory path=${project_root}/home/.ssh/
+       only_if: "$vm == 0"
+ 
+** Roles
+ - host: xxx
+   roles:
+     - db
+     - { role:ruby, sudo_user:$user }
+     - web
+
+ # Uses:
+ # roles/db/tasks/*.yml
+ # roles/db/handlers/*.yml
+ 
+** Roles
+
+roles/
+  common/
+    tasks/
+    handlers/
+    files/              # 'copy' will refer to this
+    templates/          # 'template' will refer to this
+    meta/               # Role dependencies here
+    vars/
+    defaults/main.yml
+
+
+** Task: Failures
+
+ - name: my task
+   command: ...
+   register: result
+   failed_when: "'FAILED' in result.stderr"
+
+   ignore_errors: yes
+
+   changed_when: "result.rc != 2"
+
+ 
+** Env vars
+
+ vars:
+   local_home: ""
+
+
+** Ansible commands
+
+*** Playbooks
+#+BEGIN_SRC 
+ ansible-playbook <YAML># Run on all hosts defined
+ ansible-playbook <YAML> -f 10# Run 10 hosts parallel
+ ansible-playbook <YAML> --verbose# Verbose on successful tasks
+ ansible-playbook <YAML> -C# Test run
+ ansible-playbook <YAML> -C -D# Dry run
+ ansible-playbook <YAML> -l <host># Run on single host
+
+#+END_SRC
+
+ # Run Infos
+ ansible-playbook <YAML> --list-hosts
+ ansible-playbook <YAML> --list-tasks
+
+ # Syntax Check
+ ansible-playbook --syntax-check <YAML> 
+
+*** Remote Execution
+
+  ansible all -m ping
+
+ # Execute arbitrary commands
+ ansible <hostgroup> -a <command>
+ ansible all -a "ifconfig -a"
+
+*** Debugging
+
+ List facts and state of a host
+
+ ansible <host> -m setup
+ ansible <host> -m setup -a 'filter=ansible_eth*'
+
+** Common Modules
+*** Aptitude
+
+ - apt_key: id=AC40B2F7 url="http://..."
+     state=present
+
+ - apt: pkg=nodejs state=present
+     state=present # absent | latest
+     update_cache=yes
+     force=no
+ apt: deb=https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
+ - apt_repository: repo='deb https://... raring main'
+     state=present
+*** file
+
+ - file:
+     state=directory # file | link | hard | touch | absent
+     path=/etc/dir
+     owner=bin
+     group=wheel
+     mode=0644
+     recurse=yes  # mkdir -p
+     force=yes    # ln -nfs
+
+ - copy:
+     src=/app/config/nginx.conf
+     dest=/etc/nginx/nginx.conf
+
+ - template:
+     src=config/redis.j2
+     dest=/etc/redis.conf
+*** git
+
+ - git: repo=git://github.com/
+     dest=/srv/checkout
+     version=master
+     depth=10
+     bare=yes
+*** user
+
+ - user: state=present name=git
+     system=yes
+     shell=/bin/sh
+     comment="Git Version Control"
+*** service
+
+ - service: name=nginx state=started [enabled=yes]
+*** shell
+
+ - shell: apt-get install nginx -y
+ - script: /x/y/script.sh
+*** local_action
+
+ - name: do something locally
+   local_action: shell echo hello
+
+*** debug
+
+ - debug:
+     msg: "Hello "
+
 ** Ansible playbook some parameters
 
 **** Inventory
@@ -228,7 +406,7 @@ http://docs.ansible.com/ansible/latest/intro_configuration.html
 
 #+END_SRC
 
-** List s3 buckets
+** List s3 bucket latest
 
 #+BEGIN_SRC 
 - hosts: localhost
